app/assets/stylesheets/content/_user.css.scss
#user {
  h1 {
    margin-left: 10px;
  }
  div.admin {
    margin-right: 10px;
  }
  h1 small {
    font-size: 40%;
    margin-left: 0.5em;
  }

  .tabs .selected {
    font-weight: bold;
  }

  #wca {
    margin: 3em 0;
    text-align: center;
  }
  #wca a.logo {
    padding: 15px 25px;
    margin-right: 1em;
    background: transparent image-url("wca.gif") center no-repeat;
  }
  #wca a {
    font-size: 1.25em;
  }

  ul.records {
    .puzzle {
      margin-bottom: 10px;
    }
    span {
      display: block;
      text-align: center;
    }
    .puzzle-image {
      @include puzzle-image;
      margin: 0 auto;
      margin-bottom: 5px;
    }
    .kind-image {
      @include kind-image;
    }
    li {
      width: 280px;
      float: left;
      padding: 10px;
      margin-left: 10px;
      margin-right: 10px;
      margin-bottom: 20px;
      background-color: $darkblue;
    }
    table {
      width: 100%;
    }
    tr {
      border-bottom: 1px solid $yellow;
    }
    tr.last {
      border: none;
    }
    th, td {
      padding: 0; // TODO delete default table styles?
      padding: 4px;
    }
    th {
      text-align: left;
    }
    td, thead th {
      text-align: right;
    }
    td.faster strong {
      color: #6f6;
    }
    td.slower strong, td.slower small {
      color: #ff4545;
    }
  }
  ul.records:after {
    content: "";
    clear: both;
    width: 0;
    display: block;
  }
}

